{
  "version": 4,
  "terraform_version": "1.6.1",
  "serial": 404,
  "lineage": "7cb303bf-0b3d-08c9-8984-b8ed185a2753",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-063cc976babe93482",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-05caf04035210126d",
            "domain": "vpc",
            "id": "eipalloc-063cc976babe93482",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0841a5cdffa900850",
            "private_dns": "ip-10-0-1-50.eu-central-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-18-192-252-45.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.192.252.45",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "frontend"
            },
            "tags_all": {
              "Name": "frontend"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.prod",
            "aws_network_interface.frontend",
            "aws_security_group.frontend",
            "aws_subnet.prod",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:178344858845:loadbalancer/frontend",
            "availability_zones": [
              "eu-central-1a"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "frontend-855408497.eu-central-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 300,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "frontend",
            "idle_timeout": 400,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "frontend",
            "security_groups": [
              "sg-03557a499802da70d"
            ],
            "source_security_group": "178344858845/security_group_frontend",
            "source_security_group_id": "sg-03557a499802da70d",
            "subnets": [
              "subnet-0ecdede0b44b68a05"
            ],
            "tags": {
              "Name": "frontend"
            },
            "tags_all": {
              "Name": "frontend"
            },
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.frontend",
            "aws_subnet.prod",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:178344858845:internet-gateway/igw-08c35d0615ca2f1e9",
            "id": "igw-08c35d0615ca2f1e9",
            "owner_id": "178344858845",
            "tags": {
              "Name": "production"
            },
            "tags_all": {
              "Name": "production"
            },
            "vpc_id": "vpc-0e6af1bd1fc430b94"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:178344858845:network-interface/eni-0841a5cdffa900850",
            "id": "eni-0841a5cdffa900850",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:f0:ae:4f:82:7b",
            "owner_id": "178344858845",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-03557a499802da70d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ecdede0b44b68a05",
            "tags": {
              "Name": "frontend"
            },
            "tags_all": {
              "Name": "frontend"
            }
          },
          "dependencies": [
            "aws_security_group.frontend",
            "aws_subnet.prod",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:178344858845:route-table/rtb-089f736a96b7ac108",
            "id": "rtb-089f736a96b7ac108",
            "owner_id": "178344858845",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08c35d0615ca2f1e9",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08c35d0615ca2f1e9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "production"
            },
            "tags_all": {
              "Name": "production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e6af1bd1fc430b94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prod",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7ace10be279e890",
            "route_table_id": "rtb-089f736a96b7ac108",
            "subnet_id": "subnet-0ecdede0b44b68a05"
          },
          "dependencies": [
            "aws_internet_gateway.prod",
            "aws_route_table.prod",
            "aws_subnet.prod",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:178344858845:security-group/sg-03557a499802da70d",
            "description": "frontend security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03557a499802da70d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "security_group_frontend",
            "name_prefix": "",
            "owner_id": "178344858845",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frontend"
            },
            "tags_all": {
              "Name": "frontend"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e6af1bd1fc430b94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:178344858845:subnet/subnet-0ecdede0b44b68a05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ecdede0b44b68a05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "178344858845",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production"
            },
            "tags_all": {
              "Name": "production"
            },
            "vpc_id": "vpc-0e6af1bd1fc430b94"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:178344858845:vpc/vpc-0e6af1bd1fc430b94",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02cb905237c8d53be",
            "default_route_table_id": "rtb-01638855ea5d86703",
            "default_security_group_id": "sg-069cbf2571fbf8a87",
            "dhcp_options_id": "dopt-03e81fa6e131921a6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e6af1bd1fc430b94",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01638855ea5d86703",
            "owner_id": "178344858845",
            "tags": {
              "Name": "production"
            },
            "tags_all": {
              "Name": "production"
            }
          }
        }
      ]
    }
  ]
}